# ANUInversionCourse

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_m1_wheels.yml  build_wheels.yml  publish_pypi.yml
ANU_inversion_course_test.egg-info/: PKG-INFO  SOURCES.txt
anu_inversion_course/: __init__.py  _version.py  rjmcmc.py
anu_inversion_course/rjmcmc/: CMakeLists.txt  _rjmcmc.cpp  rjmcmc.cpp
anu_inversion_course/rjmcmc/include/rjmcmc/: part2d_regression_rj.h  resultset2d.h  rjmcmc_config.h
anu_inversion_course/rjmcmc/python/swig/: rjmcmc_helper.c  rjmcmc_helper.h  rjmcmc_wrap.c
anu_inversion_course/rjmcmc/src/: dataset2d.c  regression.c  regression_part1d.c  regression_part1d_natural.c  regression_part1d_zero.c  regression_part2d.c
conda/: conda_build_config.yaml  meta.yaml
