[metadata]
name = ANU-inversion-course
version = 0.1.0
author = InLab
# home-page = (WIP)
description = ANU Inversion Course Package
long_description = file: README.md
long_description_content_type = text/markdown
# license = (yet to decide)
# keywords = inversion, inference, python package, geoscience, geophysics
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Operating System :: OS Independent

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
install_requires =
    numpy>=1.22.0
    matplotlib>=3.5.0
    scipy>=1.7.0
    tqdm>=4.62.0
    seaborn>=0.11.0

# [options.entry_points]

[options.packages.find]
exclude =
    tests
